--- a/public/signin.html
+++ b/public/signin.html
@@ -9,7 +9,7 @@
     <div class="jumbotron">
       <div class="container">
         <form class="form-signin" action="/noauth/login.json" method="POST" >
-          <h2 class="form-signin-heading">DataCon - Please sign in</h2>
+          <h2 class="form-signin-heading">DataPlay - Please sign in</h2>
           <font color="#FF0000">{{.Custom.fail}}</font>
           <input name="username" type="text" class="form-control" placeholder="Email address" required autofocus>
           <input name="password" type="password" class="form-control" placeholder="Password" required>
