--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -94,13 +94,15 @@
 		<!-- endbower -->
 		<!-- endbuild -->
 
-		<!-- build:js({.tmp,app}) scripts/scripts.js -->
+		<!-- build:js({.tmp,app}) scripts/app.js -->
 		<script src="scripts/app.js"></script>
+		<script src="scripts/routes.js"></script>
 		<script src="scripts/controllers/home.js"></script>
 		<script src="scripts/controllers/search.js"></script>
 		<script src="scripts/controllers/overview.js"></script>
 		<script src="scripts/controllers/charts.js"></script>
-		<script src="scripts/controllers/login.js"></script>
+		<script src="scripts/controllers/user.js"></script>
+		<script src="scripts/services/user.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
