--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -13,7 +13,7 @@
 
 		<!-- build:css(.) styles/vendor.css -->
 		<!-- bower:css -->
-		<link rel="stylesheet" href="bower_components/bootswatch/darkly/bootstrap.css" />
+		<link rel="stylesheet" href="bower_components/bootswatch-dist/css/bootstrap.css" />
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -24,13 +24,14 @@
 		<link rel="stylesheet" href="styles/signin.css">
 		<!-- endbuild -->
 	</head>
+
 	<body ng-app="dataplayApp">
 		<!--[if lt IE 8]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
 
 		<!-- Fixed navbar -->
-		<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="HomeCtrl">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -43,10 +44,12 @@
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="/">Home</a></li>
+						<li ng-class="{active: isActive('/')}" ng-show="user.isAuthenticated() !== false"><a href="/">Home</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#" ua-logout>Log Out</a></li>
+						<li ng-class="{active: isActive('/login')}" ng-hide="user.isAuthenticated()!== false"><a ng-href="/login">Login</a></li>
+						<li ng-class="{active: isActive('/register')}" ng-hide="user.isAuthenticated() !== false"><a ng-href="/register">Register</a></li>
+						<li ng-show="user.isAuthenticated() !== false"><a href="#" ng-controller="UserCtrl" ng-click="logout()">Logout</a></li>
 					</ul>
 				</div><!--/.nav-collapse -->
 			</div>
@@ -66,12 +69,12 @@
 		</div>
 
 		<!-- Google Analytics -->
-		<script>
+		<!-- <script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 			ga('create', 'UA-XXXX-Y', 'auto');
 			ga('send', 'pageview');
-		</script>
+		</script> -->
 		<!-- End Google Analytics -->
 
 		<!--[if lt IE 9]>
@@ -81,16 +84,14 @@
 
 		<!-- build:js(.) scripts/vendor.js -->
 		<!-- bower:js -->
-		<script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/json3/lib/json3.js"></script>
-		<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		<script src="bower_components/angular-resource/angular-resource.js"></script>
 		<script src="bower_components/angular-cookies/angular-cookies.js"></script>
 		<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 		<script src="bower_components/angular-animate/angular-animate.js"></script>
 		<script src="bower_components/angular-route/angular-route.js"></script>
-		<script src="bower_components/userapp-angular/angularjs.userapp.js"></script>
+		<script src="bower_components/angular-cookie/angular-cookie.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -103,6 +104,7 @@
 		<script src="scripts/controllers/charts.js"></script>
 		<script src="scripts/controllers/user.js"></script>
 		<script src="scripts/services/user.js"></script>
+		<script src="scripts/directives/match.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
