--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -92,19 +92,26 @@
 		<script src="bower_components/angular-animate/angular-animate.js"></script>
 		<script src="bower_components/angular-route/angular-route.js"></script>
 		<script src="bower_components/angular-cookie/angular-cookie.js"></script>
+		<script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+		<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
 		<!-- build:js({.tmp,app}) scripts/app.js -->
 		<script src="scripts/app.js"></script>
+
+		<script src="scripts/directives/match.js"></script>
+
+		<script src="scripts/services/auth.js"></script>
+		<script src="scripts/services/user.js"></script>
+
 		<script src="scripts/routes.js"></script>
+
 		<script src="scripts/controllers/home.js"></script>
 		<script src="scripts/controllers/search.js"></script>
 		<script src="scripts/controllers/overview.js"></script>
 		<script src="scripts/controllers/charts.js"></script>
 		<script src="scripts/controllers/user.js"></script>
-		<script src="scripts/services/user.js"></script>
-		<script src="scripts/directives/match.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
