--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -13,7 +13,7 @@
 
 		<!-- build:css(.) styles/vendor.css -->
 		<!-- bower:css -->
-		<link rel="stylesheet" href="bower_components/bootswatch-dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="bower_components/bootswatch/darkly/bootstrap.css" />
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -64,7 +64,7 @@
 
 		<div class="footer">
 			<div class="container">
-				<p class="text-muted">&copy; PlayGen Ltd.</p>
+				<p class="text-muted">Powered by <strong><em>PlayGen</em></strong> &copy; 2014.</p>
 			</div>
 		</div>
 
@@ -77,15 +77,20 @@
 		</script> -->
 		<!-- End Google Analytics -->
 
+		<!-- build:js(.) scripts/ie.js -->
+		<!-- bower:js -->
 		<!--[if lt IE 9]>
+		<script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+		<script src="bower_components/respond/dest/respond.src.js"></script>
 		<script src="bower_components/es5-shim/es5-shim.js"></script>
-		<script src="bower_components/json3/lib/json3.min.js"></script>
+		<script src="bower_components/json3/lib/json3.js"></script>
 		<![endif]-->
+		<!-- endbower -->
+		<!-- endbuild -->
 
 		<!-- build:js(.) scripts/vendor.js -->
 		<!-- bower:js -->
 		<script src="bower_components/angular/angular.js"></script>
-		<script src="bower_components/json3/lib/json3.js"></script>
 		<script src="bower_components/angular-resource/angular-resource.js"></script>
 		<script src="bower_components/angular-cookies/angular-cookies.js"></script>
 		<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
