Added support for API Session header and better $http service interceptor.
Go

- X-API-SESSION Header

- SessionApiHandler injection for header value check

- User sessions are now not related to Browser (will help HAProxy)

Angular

- Http Request Interceptor for inserting Session into header

- Centralized API call w/o extra parameter(s)

- Search UI improvement

--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -109,6 +109,7 @@
 
 		<script src="scripts/services/auth.js"></script>
 		<script src="scripts/services/user.js"></script>
+		<script src="scripts/services/requestinterceptor.js"></script>
 
 		<script src="scripts/routes.js"></script>
 
