--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -99,6 +99,9 @@
 		<script src="bower_components/angular-cookie/angular-cookie.js"></script>
 		<script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 		<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+		<script src="bower_components/crossfilter/crossfilter.js"></script>
+		<script src="bower_components/d3/d3.js"></script>
+		<script src="bower_components/dc.js/dc.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -109,7 +112,9 @@
 
 		<script src="scripts/services/auth.js"></script>
 		<script src="scripts/services/user.js"></script>
+		<script src="scripts/services/overview.js"></script>
 		<script src="scripts/services/requestinterceptor.js"></script>
+		<script src="scripts/services/patternmatcher.js"></script>
 
 		<script src="scripts/routes.js"></script>
 
