--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -14,6 +14,7 @@
 		<!-- build:css(.) styles/vendor.css -->
 		<!-- bower:css -->
 		<link rel="stylesheet" href="bower_components/bootswatch/darkly/bootstrap.css" />
+		<link rel="stylesheet" href="bower_components/dcjs/dc.css" />
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -90,6 +91,11 @@
 
 		<!-- build:js(.) scripts/vendor.js -->
 		<!-- bower:js -->
+		<script src="bower_components/lodash/dist/lodash.js"></script>
+		<script src="bower_components/d3/d3.js"></script>
+		<script src="bower_components/crossfilter/crossfilter.js"></script>
+		<script src="bower_components/dcjs/dc.js"></script>
+
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-resource/angular-resource.js"></script>
 		<script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -99,9 +105,7 @@
 		<script src="bower_components/angular-cookie/angular-cookie.js"></script>
 		<script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 		<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-		<script src="bower_components/crossfilter/crossfilter.js"></script>
-		<script src="bower_components/d3/d3.js"></script>
-		<script src="bower_components/dc.js/dc.js"></script>
+		<script src="bower_components/angular-dc/dist/angular-dc.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
