--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -15,6 +15,7 @@
 		<!-- bower:css -->
 		<link rel="stylesheet" href="bower_components/bootswatch/flatly/bootstrap.css" />
 		<link rel="stylesheet" href="bower_components/dcjs/dc.css" />
+		<link rel="stylesheet" href="bower_components/angular-loading-bar/src/loading-bar.css"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -80,6 +81,7 @@
 		<script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 		<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 		<script src="bower_components/angular-dc/dist/angular-dc.js"></script>
+		<script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
