Overview screen Loader. Bar/Row chart Y-Axis fixes.

--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -15,7 +15,6 @@
 		<!-- bower:css -->
 		<link rel="stylesheet" href="bower_components/bootswatch/flatly/bootstrap.css" />
 		<link rel="stylesheet" href="bower_components/dcjs/dc.css" />
-		<link rel="stylesheet" href="bower_components/angular-loading-bar/src/loading-bar.css"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -24,6 +23,7 @@
 		<link rel="stylesheet" href="styles/charts.css">
 		<link rel="stylesheet" href="styles/maptest.css">
 		<link rel="stylesheet" href="styles/signin.css">
+		<link rel="stylesheet" href="styles/spinner.css">
 		<!-- endbuild -->
 	</head>
 
@@ -81,7 +81,6 @@
 		<script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 		<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 		<script src="bower_components/angular-dc/dist/angular-dc.js"></script>
-		<script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
