Add observation modal

--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -81,6 +81,7 @@
 		<script src="bower_components/angular-dc/dist/angular-dc.js"></script>
 		<script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/bootstrap/js/tooltip.js"></script>
+		<script src="bower_components/bootstrap/js/modal.js"></script>
 
 		<script src="scripts/vendor/d3.selection.tooltip.js"></script>
 		<!-- endbower -->
