--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -83,6 +83,7 @@
 		<script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/bootstrap/js/tooltip.js"></script>
 		<script src="bower_components/bootstrap/js/modal.js"></script>
+		<script src="bower_components/bootstrap/js/tab.js"></script>
 
 		<script src="scripts/vendor/d3.selection.tooltip.js"></script>
 		<!-- endbower -->
@@ -100,6 +101,7 @@
 		<script src="scripts/services/charts.js"></script>
 		<script src="scripts/services/requestinterceptor.js"></script>
 		<script src="scripts/services/patternmatcher.js"></script>
+		<script src="scripts/services/profile.js"></script>
 
 		<script src="scripts/routes.js"></script>
 
@@ -110,6 +112,7 @@
 		<script src="scripts/controllers/chart/related.js"></script>
 		<script src="scripts/controllers/chart/correlated.js"></script>
 		<script src="scripts/controllers/user.js"></script>
+		<script src="scripts/controllers/profile.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
