Populate other tabs on profile page

--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -23,6 +23,7 @@
 		<link rel="stylesheet" href="styles/charts.css">
 		<link rel="stylesheet" href="styles/maptest.css">
 		<link rel="stylesheet" href="styles/signin.css">
+		<link rel="stylesheet" href="styles/profile.css">
 		<link rel="stylesheet" href="styles/spinner.css">
 		<!-- endbuild -->
 	</head>
