separate sidebar styles from charts.less

--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -26,6 +26,7 @@
 		<link rel="stylesheet" href="styles/signin.css">
 		<link rel="stylesheet" href="styles/profile.css">
 		<link rel="stylesheet" href="styles/spinner.css">
+		<link rel="stylesheet" href="styles/sidebar.css">
 		<!-- endbuild -->
 	</head>
 
