--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -27,6 +27,7 @@
 		<link rel="stylesheet" href="styles/profile.css">
 		<link rel="stylesheet" href="styles/spinner.css">
 		<link rel="stylesheet" href="styles/sidebar.css">
+		<link rel="stylesheet" href="styles/search.css">
 		<!-- endbuild -->
 	</head>
 
