Add overview screen

--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -28,6 +28,7 @@
 		<link rel="stylesheet" href="styles/spinner.css">
 		<link rel="stylesheet" href="styles/sidebar.css">
 		<link rel="stylesheet" href="styles/search.css">
+		<link rel="stylesheet" href="styles/overviewscreen.css">
 		<!-- endbuild -->
 	</head>
 
@@ -106,6 +107,7 @@
 		<script src="scripts/services/requestinterceptor.js"></script>
 		<script src="scripts/services/patternmatcher.js"></script>
 		<script src="scripts/services/profile.js"></script>
+		<script src="scripts/services/overviewscreen.js"></script>
 
 		<script src="scripts/routes.js"></script>
 
@@ -117,6 +119,7 @@
 		<script src="scripts/controllers/chart/correlated.js"></script>
 		<script src="scripts/controllers/user.js"></script>
 		<script src="scripts/controllers/profile.js"></script>
+		<script src="scripts/controllers/overviewscreen.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
