--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -29,6 +29,7 @@
 		<link rel="stylesheet" href="styles/sidebar.css">
 		<link rel="stylesheet" href="styles/search.css">
 		<link rel="stylesheet" href="styles/overviewscreen.css">
+		<link rel="stylesheet" href="styles/landing.css">
 		<!-- endbuild -->
 	</head>
 
@@ -111,7 +112,7 @@
 
 		<script src="scripts/routes.js"></script>
 
-		<script src="scripts/controllers/home.js"></script>
+		<script src="scripts/controllers/recent.js"></script>
 		<script src="scripts/controllers/search.js"></script>
 		<script src="scripts/controllers/overview/related.js"></script>
 		<script src="scripts/controllers/overview/correlated.js"></script>
@@ -120,6 +121,7 @@
 		<script src="scripts/controllers/user.js"></script>
 		<script src="scripts/controllers/profile.js"></script>
 		<script src="scripts/controllers/overviewscreen.js"></script>
+		<script src="scripts/controllers/landing.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
