--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -30,6 +30,7 @@
 		<link rel="stylesheet" href="styles/search.css">
 		<link rel="stylesheet" href="styles/overviewscreen.css">
 		<link rel="stylesheet" href="styles/landing.css">
+		<link rel="stylesheet" href="styles/home.css">
 		<!-- endbuild -->
 	</head>
 
@@ -122,6 +123,7 @@
 		<script src="scripts/controllers/profile.js"></script>
 		<script src="scripts/controllers/overviewscreen.js"></script>
 		<script src="scripts/controllers/landing.js"></script>
+		<script src="scripts/controllers/home.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
