--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -110,6 +110,7 @@
 		<script src="scripts/services/patternmatcher.js"></script>
 		<script src="scripts/services/profile.js"></script>
 		<script src="scripts/services/overviewscreen.js"></script>
+		<script src="scripts/services/home.js"></script>
 
 		<script src="scripts/routes.js"></script>
 
