--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -15,6 +15,7 @@
 		<!-- build:css(.) styles/vendor.css -->
 		<!-- bower:css -->
 		<link rel="stylesheet" href="bower_components/bootswatch/flatly/bootstrap.css" />
+		<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
 		<link rel="stylesheet" href="bower_components/dcjs/dc.css" />
 		<!-- endbower -->
 		<!-- endbuild -->
