Homepage Text truncate (using filter).

--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -101,6 +101,7 @@
 		<script src="scripts/app.js"></script>
 
 		<script src="scripts/directives/match.js"></script>
+		<script src="scripts/directives/truncate.js"></script>
 
 		<script src="scripts/services/auth.js"></script>
 		<script src="scripts/services/user.js"></script>
