Added Info API on Overview Grid.

--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -118,6 +118,7 @@
 
 		<script src="scripts/controllers/recent.js"></script>
 		<script src="scripts/controllers/search.js"></script>
+		<script src="scripts/controllers/overview.js"></script>
 		<script src="scripts/controllers/overview/related.js"></script>
 		<script src="scripts/controllers/overview/correlated.js"></script>
 		<script src="scripts/controllers/chart/related.js"></script>
