--- a/www-src/dataplay-ui/app/index.html
+++ b/www-src/dataplay-ui/app/index.html
@@ -32,6 +32,7 @@
 		<link rel="stylesheet" href="styles/overviewscreen.css">
 		<link rel="stylesheet" href="styles/landing.css">
 		<link rel="stylesheet" href="styles/home.css">
+		<link rel="stylesheet" href="styles/hoverfade.css">
 		<!-- endbuild -->
 	</head>
 
