--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -102,6 +102,7 @@
 		<script src="scripts/app.js"></script>
 
 		<script src="scripts/helpers/related.js"></script>
+		<script src="scripts/helpers/map.js"></script>
 
 		<script src="scripts/directives/match.js"></script>
 		<script src="scripts/directives/truncate.js"></script>
