--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -105,6 +105,7 @@
 		<script src="scripts/app.js"></script>
 
 		<script src="scripts/helpers/related.js"></script>
+		<script src="scripts/helpers/correlated.js"></script>
 		<script src="scripts/helpers/map.js"></script>
 
 		<script src="scripts/directives/match.js"></script>
