--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -37,7 +37,7 @@
 		<!-- endbuild -->
 	</head>
 
-	<body ng-app="dataplayApp">
+	<body ng-app="dataplayApp" ng-strict-di>
 		<!--[if lt IE 8]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
