Frontend HTML5 updates with Browser titles.
- Fixed Font-Awesome on dist builds

- Added dynamic page titles

- Angular decorator.sniffer inject

- < IE8 no-js class

- Build Update

--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
-<html class="no-js">
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" ng-app="dataplayApp" ng-strict-di> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" ng-app="dataplayApp" ng-strict-di> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" ng-app="dataplayApp" ng-strict-di> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" ng-app="dataplayApp" ng-strict-di> <!--<![endif]-->
 	<head>
-		<base href="/">
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>DataPlay</title>
+		<base href="/">
+
+		<title ng-bind="'DataPlay' + title">DataPlay</title>
 
 		<link rel="shortcut icon" href="images/favicon.png">
 
@@ -37,7 +41,7 @@
 		<!-- endbuild -->
 	</head>
 
-	<body ng-app="dataplayApp" ng-strict-di>
+	<body>
 		<!--[if lt IE 8]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
