Add social login buttons to login page

--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -38,6 +38,7 @@
 		<link rel="stylesheet" href="styles/landing.css">
 		<link rel="stylesheet" href="styles/home.css">
 		<link rel="stylesheet" href="styles/hoverfade.css">
+		<link rel="stylesheet" href="styles/login.css">
 		<!-- endbuild -->
 	</head>
 
@@ -102,6 +103,8 @@
 		<script src="bower_components/bootstrap/js/tab.js"></script>
 
 		<script src="scripts/vendor/d3.selection.tooltip.js"></script>
+
+		<script src="bower_components/hello/dist/hello.all.min.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
