Rename login.less to user.less to make it less specific, and correspond to controller name

--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -38,7 +38,7 @@
 		<link rel="stylesheet" href="styles/landing.css">
 		<link rel="stylesheet" href="styles/home.css">
 		<link rel="stylesheet" href="styles/hoverfade.css">
-		<link rel="stylesheet" href="styles/login.css">
+		<link rel="stylesheet" href="styles/user.css">
 		<!-- endbuild -->
 	</head>
 
