Add admin users page

--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -38,6 +38,7 @@
 		<link rel="stylesheet" href="styles/home.css">
 		<link rel="stylesheet" href="styles/hoverfade.css">
 		<link rel="stylesheet" href="styles/user.css">
+		<link rel="stylesheet" href="styles/admin.css">
 		<!-- endbuild -->
 	</head>
 
@@ -142,6 +143,7 @@
 		<script src="scripts/controllers/overviewscreen.js"></script>
 		<script src="scripts/controllers/landing.js"></script>
 		<script src="scripts/controllers/home.js"></script>
+		<script src="scripts/controllers/admin/users.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
