--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -128,6 +128,7 @@
 		<script src="scripts/services/profile.js"></script>
 		<script src="scripts/services/overviewscreen.js"></script>
 		<script src="scripts/services/home.js"></script>
+		<script src="scripts/services/admin.js"></script>
 
 		<script src="scripts/routes.js"></script>
 
