--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -145,6 +145,7 @@
 		<script src="scripts/controllers/landing.js"></script>
 		<script src="scripts/controllers/home.js"></script>
 		<script src="scripts/controllers/admin/users.js"></script>
+		<script src="scripts/controllers/admin/observations.js"></script>
 		<!-- endbuild -->
 	</body>
 </html>
