--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -98,6 +98,7 @@
 		<script src="bower_components/nvd3/nv.d3.js"></script>
 
 		<script src="bower_components/jquery/dist/jquery.js"></script>
+		<script src="bower_components/bootstrap/js/collapse.js"></script>
 		<script src="bower_components/bootstrap/js/tooltip.js"></script>
 		<script src="bower_components/bootstrap/js/modal.js"></script>
 		<script src="bower_components/bootstrap/js/tab.js"></script>
