Fix broken minified files

--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -103,9 +103,9 @@
 		<script src="bower_components/bootstrap/js/modal.js"></script>
 		<script src="bower_components/bootstrap/js/tab.js"></script>
 
-		<script src="scripts/vendor/d3.selection.tooltip.js"></script>
+		<script src="bower_components/dataplay/js/d3.selection.tooltip.js"></script>
 
-		<script src="bower_components/hello/dist/hello.all.min.js"></script>
+		<script src="bower_components/hello/dist/hello.all.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
