--- a/www-src/app/redirect.html
+++ b/www-src/app/redirect.html
@@ -3,6 +3,10 @@
 	<head></head>
 	<body>
 		<p>Redirecting...</p>
-		<script src="bower_components/hello/dist/hello.all.min.js"></script>
+		<!-- build:js(.) scripts/redirect.js -->
+		<!-- bower:js -->
+		<script src="bower_components/hello/dist/hello.all.js"></script>
+		<!-- endbower -->
+		<!-- endbuild -->
 	</body>
 </html>
