Use app.css instead of main.css

--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -25,7 +25,7 @@
 		<!-- endbower -->
 		<!-- endbuild -->
 
-		<!-- build:css(.tmp) styles/main.css -->
+		<!-- build:css(.tmp) styles/app.css -->
 		<link rel="stylesheet" href="styles/layout.css">
 		<link rel="stylesheet" href="styles/charts.css">
 		<link rel="stylesheet" href="styles/maptest.css">
