--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -117,6 +117,7 @@
 
 		<script src="scripts/directives/match.js"></script>
 		<script src="scripts/directives/truncate.js"></script>
+		<script src="scripts/directives/orderObjectBy.js"></script>
 
 		<script src="scripts/services/auth.js"></script>
 		<script src="scripts/services/user.js"></script>
