--- a/www-src/app/index.html
+++ b/www-src/app/index.html
@@ -33,7 +33,7 @@
 		<link rel="stylesheet" href="styles/spinner.css">
 		<link rel="stylesheet" href="styles/sidebar.css">
 		<link rel="stylesheet" href="styles/search.css">
-		<link rel="stylesheet" href="styles/overviewscreen.css">
+		<link rel="stylesheet" href="styles/activitymonitor.css">
 		<link rel="stylesheet" href="styles/landing.css">
 		<link rel="stylesheet" href="styles/home.css">
 		<link rel="stylesheet" href="styles/hoverfade.css">
@@ -126,7 +126,7 @@
 		<script src="scripts/services/requestinterceptor.js"></script>
 		<script src="scripts/services/patternmatcher.js"></script>
 		<script src="scripts/services/profile.js"></script>
-		<script src="scripts/services/overviewscreen.js"></script>
+		<script src="scripts/services/activitymonitor.js"></script>
 		<script src="scripts/services/home.js"></script>
 		<script src="scripts/services/admin.js"></script>
 
@@ -141,7 +141,7 @@
 		<script src="scripts/controllers/chart/correlated.js"></script>
 		<script src="scripts/controllers/user.js"></script>
 		<script src="scripts/controllers/profile.js"></script>
-		<script src="scripts/controllers/overviewscreen.js"></script>
+		<script src="scripts/controllers/activitymonitor.js"></script>
 		<script src="scripts/controllers/landing.js"></script>
 		<script src="scripts/controllers/home.js"></script>
 		<script src="scripts/controllers/admin/users.js"></script>
